--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
 	"scripts": {
 		"start": "node app.js",
 		"dev": "nodemon",
+		"migrate": "npx prisma migrate dev",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@prisma/client": "^4.0.0",
 		"apollo-server-core": "^3.9.0",
 		"apollo-server-express": "^3.9.0",
 		"express": "^4.18.1",
 		"graphql": "^16.5.0",
 		"nodemon": "^2.0.18"
+	},
+	"devDependencies": {
+		"prisma": "^4.0.0"
 	}
 }
